# 2025-final-individual-Tapeline

solution/: README.md  (+1 more)
solution/backend/: Dockerfile  README.md  alembic.ini  app.py  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  setup.cfg  start.sh
solution/backend/algorithm_playground/: entities_constructor.py  main.py  open_tests_runner.py  sim.py  strategies.py  window.py
solution/backend/prodadvert/: config.py  di.py  instrumentation.py  main.py
solution/backend/prodadvert/application/: dto.py  exceptions.py
solution/backend/prodadvert/application/interactors/: advertisements.py  advertisers.py  ai.py  campaigns.py  clients.py  metrics.py  profanity.py
solution/backend/prodadvert/application/interfaces/: advertisers.py  ai.py  campaigns.py  clients.py  common.py  date.py  metrics.py  profanity.py  storage.py
solution/backend/prodadvert/controllers/http/: advertisements.py  advertisers.py  ai.py  campaigns.py  clients.py  exc_handlers.py  openapi.py  schemas.py  utils.py
solution/backend/prodadvert/domain/: entities.py  moderation.py  recommendation.py
solution/backend/prodadvert/infrastructure/ai/: ddg_client.py  text_generator.py
solution/backend/prodadvert/infrastructure/migrations/: env.py
solution/backend/prodadvert/infrastructure/persistence/: advertisers.py  cache.py  campaigns.py  clients.py  database.py  date.py  metrics.py  models.py  profanity.py  s3.py
solution/backend/tests/: utils.py
solution/backend/tests/e2e/: data_gen.py  fixtures.py  request_utils.py
solution/backend/tests/unit/: data_gen.py
solution/bot/: Dockerfile  pyproject.toml  ruff.toml  start.sh
solution/bot/prodadvert_bot/: bot.py  config.py  decorators.py  di.py  main.py  plotter.py
solution/bot/prodadvert_bot/application/: entities.py  exceptions.py
solution/bot/prodadvert_bot/infrastructure/: advertiser_service.py  campaign_service.py  text_generator.py
(+57 files in other folders)
