[project]
name = "prodadvert"
version = "0.1.0"
description = "PROD'25 Backend Finals Solution. Advertisement app."
authors = [
    {name = "Tapeline",email = "yt.redstone.mail@gmail.com"}
]
license = {text = "GNU GPL v3.0"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "litestar[attrs,pydantic,sqlalchemy,standard] (>=2.14.0,<3.0.0)",
    "dishka (>=1.4.2,<2.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "psycopg (>=3.2.4,<4.0.0)",
    "psycopg-binary (>=3.2.4,<4.0.0)",
    "minio (>=7.2.15,<8.0.0)",
    "homoglyphs (>=2.0.4,<3.0.0)",
    "prometheus-client (>=0.21.1,<0.22.0)",
    "aiohttp (>=3.11.12,<4.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "asgi-monitor (>=0.6.0,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mimesis = "^18.0.0"
pytest-asyncio = "^0.25.3"
pytest-cov = "^6.0.0"
gevent = "^24.11.1"
ruff = "^0.9.6"
mypy = "^1.15.0"
customtkinter = "^5.2.2"
wemake-python-styleguide = "^1.0.0"
genbadge = {extras = ["all"], version = "^1.1.1"}
aisle = "^0.1.1"

