[project]
name = "prodadvert-bot"
version = "0.1.0"
description = "PRODAdvert telegram boty"
authors = [
    {name = "Tapeline",email = "yt.redstone.mail@gmail.com"}
]
license = {text = "GNU GPL v3"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "aiogram (>=3.17.0,<4.0.0)",
    "aiogram-dialog (>=2.3.1,<3.0.0)",
    "dishka (>=1.4.2,<2.0.0)",
    "aiohttp (>=3.11.12,<4.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "catppuccin (>=2.3.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
